Update to jade 1.8 + Button alignment fix

--- a/styles/base.less
+++ b/styles/base.less
@@ -52,7 +52,7 @@ input[type="button"] {
   color: @green;
   border-color: #bae2cc;
   height: 36px;
-  line-height: 36px;
+  line-height: 35px;
   padding: 0 13px;
   margin: 0;
 
@@ -90,7 +90,7 @@ select {
 
 .button-large {
   font-size: 16px;
-  line-height: 44px;
+  line-height: 42px;
   height: 44px;
 }
 
